--- a/galerie.html
+++ b/galerie.html
@@ -67,7 +67,7 @@
         }
 
         .service-card-icon {
-            width: 100px;
+            width: 400px;
             padding-bottom: 20px;
         }
 
@@ -121,7 +121,7 @@
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="/index.html">Domů</a>
                     <a class="nav-link" href="/galerie.html">Galerie</a>
-                    <a class="nav-link" href="index.html#footer">Kontakt</a>
+                    <a class="nav-link" href="galerie.html#footer">Kontakt</a>
                 </div>
             </div>
         </div>
@@ -143,80 +143,36 @@
             </div>
         </div>
 
-        <section class="content-section about-us container">
-            <h2 class="text-center">O nás</h2>
-            <p>
-            Pražský rodinný autoservis s dlouholetou zkušeností je synonymem spolehlivosti, profesionality a péče o vaše vozidlo. Tato renomovaná autoservisní firma, s kořeny sahajícími až do minulého století, se pyšní dlouholetou tradicí poskytování kvalitních služeb svým zákazníkům.
-            </p>
-
-            <p>
-            Autoservis se nachází v srdci Prahy, což znamená vynikající dostupnost pro místní i okolní obyvatele. Kromě ideální polohy se tým odborníků může pochlubit rozsáhlými zkušenostmi v oboru, které vám zaručují nejvyšší standardy péče o váš automobil. Odborníci v tomto autoservisu mají hluboké technické znalosti a jsou vyškoleni na práci s různými značkami a modely vozidel.
-            </p>
-
-            <p>
-            Zákazníci jsou vítáni s otevřenou náručí a vědomím, že jejich vozidlo bude v péči profesionálů. Autoservis se specializuje na pravidelný servis, opravy motoru, elektroniku, brzdy, výměnu oleje a mnoho dalších služeb, které zajistí bezproblémový provoz vašeho automobilu.
-            </p>
-            
-            <p>
-            Rodinný přístup je výrazným prvkem této autoservisní firmy, což znamená, že se můžete těšit na individuální péči a osobní přístup ke každému zákazníkovi. Spolehlivost, kvalita a dlouholetá tradice dělají z tohoto pražského rodinného autoservisu první volbu pro ty, kteří očekávají skvělý servis pro svá vozidla.
-            </p>
-            
-        </section>
-
-        <div class="parallax">
-            <h1>naše služby</h1>
-        </div>
-
         <section class="content-section container">
-                Opravy všech druhů automobilů jsou klíčovou službou poskytovanou naším autoservisem, který se specializuje na komplexní péči o vozidla. Naši zkušení mechanici a technici jsou připraveni řešit širokou škálu problémů, od mechanických a elektrických poruch po karosářské opravy.
             <div class="row">
                 <div class="col-md-4 service-card">
-                    <img class="service-card-icon" src="./images/snow.svg" alt="wheel" />
-                    <h5 class="service-card-heading">Plnění klimatizací</h5>
-                    <div class="service-card-description">
-                        Plnění klimatizace do aut je klíčovým prvkem udržení optimálního komfortu a bezpečnosti během jízdy. Specializované autoservisy nabízejí tuto službu, která zahrnuje doplnění chladící látky v klimatizačním systému vozidla.
-                    </div>
-                </div>
-                <div class="col-md-4 service-card">
-                    <img class="service-card-icon" src="./images/wrench-svgrepo-com.svg" alt="wheel" />
-                    <h5 class="service-card-heading">Opravy všech druhů automobilů</h5>
-                    <div class="service-card-description">
-                        Naše služby zahrnují diagnostiku a opravy motoru, brzdového systému, drobné elektroniky, převodovky a dalších klíčových částí vozidla. Díky širokým technickým znalostem a neustálému školení jsme schopni pracovat s různými značkami a modely automobilů.
-                    </div>
+                    <img class="service-card-icon" src="./galerie/bmw1.jpeg" alt="wheel" />
                 </div>
 
                 <div class="col-md-4 service-card">
-                    <img class="service-card-icon" src="./images/wrench-svgrepo-com.svg" alt="wheel" />
-                    <h5 class="service-card-heading">Příprava aut na STK</h5>
-                    <div class="service-card-description">
-                        Příprava auta na STK (technickou kontrolu) je klíčovou službou našeho autoservisu, která zajistí, že vaše vozidlo splňuje veškeré technické požadavky a normy pro úspěšné projití kontroly. Naši zkušení technici se postarají o důkladnou kontrolu klíčových aspektů vašeho vozidla a případné potřebné opravy.
-                    </div>
+                    <img class="service-card-icon" src="./galerie/bmw2.jpeg" alt="wheel" />
                 </div>
 
                 <div class="col-md-4 service-card">
-                    <img class="service-card-icon" src="./images/drop-svgrepo-com.svg" alt="wheel" />
-                    <h5 class="service-card-heading">Výměna všech provozních kapalin</h5>
-                    <div class="service-card-description">
-                        Tato komplexní služba zahrnuje výměnu motorového oleje, chladící kapaliny, brzdové kapaliny, převodového oleje a dalších provozních kapalin podle potřeb a požadavků vašeho vozidla.
-                        Tým našich techniků se postará o každý detail, aby zajistil správnou kvalitu a kompatibilitu nových kapalin s vaším vozidlem. Výměna provozních kapalin je klíčovým prvkem pravidelné údržby, který pomáhá prodloužit životnost motoru, optimalizuje výkon brzd a převodovky, a zajišťuje bezproblémový chod celého vozidla.
-                    </div>
+                    <img class="service-card-icon" src="./galerie/bmw2.jpeg" alt="wheel" />
                 </div>
+            </div>
+
+            <div class="row">
                 <div class="col-md-4 service-card">
-                    <img class="service-card-icon" src="./images/wheel-svgrepo-com.svg" alt="wheel" />
-                    <h5 class="service-card-heading">Přezutí kol</h5>
-                    <div class="service-card-description">
-                        <p>
-                        Přezutí a uskladnění kol včetně vyvážení jsou další z našich klíčových služb našeho autoservisu, které přinášejí pohodlí a bezpečnost v každém ročním období. Naši zkušení technici se postarají o profesionální přezutí vašich kol podle aktuálních požadavků a standardů.
-                        </p>
-                    </div>
+                    <img class="service-card-icon" src="./galerie/bmw1.jpeg" alt="wheel" />
                 </div>
+
                 <div class="col-md-4 service-card">
-                    <img class="service-card-icon" src="./images/wheel-svgrepo-com.svg" alt="wheel" />
-                    <h5 class="service-card-heading">Uskladnění kol</h5>
-                    <div class="service-card-description">
-                        Nabízíme také uskladnění kol, což je ideální možnost pro ty, kteří nemají dostatek místa doma. Naše bezpečné a klimatizované sklady zajistí, že vaše pneumatiky budou chráněny před nepříznivými vlivy počasí a dlouhodobým skladováním.
-                    </div>
+                    <img class="service-card-icon" src="./galerie/bmw2.jpeg" alt="wheel" />
                 </div>
+
+                <div class="col-md-4 service-card">
+                    <img class="service-card-icon" src="./galerie/bmw2.jpeg" alt="wheel" />
+                </div>
+            </div>
+
+            <div class="row">
             </div>
         </section>
 
@@ -291,8 +247,6 @@
                 </div>
             </div>
         </section>
-    </main>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
