--- a/galerie.html
+++ b/galerie.html
@@ -154,21 +154,21 @@
                 </div>
 
                 <div class="col-md-4 service-card">
-                    <img class="service-card-icon" src="./galerie/bmw2.jpeg" alt="wheel" />
+                    <img class="service-card-icon" src="./galerie/bmw1.jpeg" alt="wheel" />
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-md-4 service-card">
-                    <img class="service-card-icon" src="./galerie/bmw1.jpeg" alt="wheel" />
+                    <img class="service-card-icon" src="./galerie/motor.jpg" alt="wheel" />
                 </div>
 
                 <div class="col-md-4 service-card">
-                    <img class="service-card-icon" src="./galerie/bmw2.jpeg" alt="wheel" />
+                    <img class="service-card-icon" src="./galerie/motorka.jpg" alt="wheel" />
                 </div>
 
                 <div class="col-md-4 service-card">
-                    <img class="service-card-icon" src="./galerie/bmw2.jpeg" alt="wheel" />
+                    <img class="service-card-icon" src="./galerie/motor2.jpg" alt="wheel" />
                 </div>
             </div>
 
